tests/cases/fail/generic-for-3/source.lua
for x in pairs(y) do